Add tests for FindCommandParserTest and StringUtilTest:containsSubstringIgnoreCase